# base_buses

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
src/: CMakeLists.txt  main.c  platform_config.h  test_apb.txt
src/ahb/: CMakeLists.txt  ahb.c  ahb.h  ahb_hal.c  ahb_hal.h
src/apb/: CMakeLists.txt  apb.c  apb.h  apb_hal.c  apb_hal.h
src/axi/: CMakeLists.txt  axi.c  axi.h  axi_hal.c  axi_hal.h
src/can/: CMakeLists.txt  can.c  can.h  can_hal.c  can_hal.h
src/canfd/: CMakeLists.txt  canfd.c  canfd.h  canfd_hal.c  canfd_hal.h
src/dma/: CMakeLists.txt  dma.c  dma.h  dma_hal.c  dma_hal.h
src/emmc/: CMakeLists.txt  emmc.c  emmc.h  emmc_hal.c  emmc_hal.h
src/ethernet/: CMakeLists.txt  ethernet.c  ethernet.h  ethernet_hal.c  ethernet_hal.h
src/flexray/: CMakeLists.txt  flexray.c  flexray.h  flexray_hal.c  flexray_hal.h
src/i2c/: CMakeLists.txt  i2c.c  i2c.h  i2c_hal.c  i2c_hal.h
src/i2s/: CMakeLists.txt  i2s.c  i2s.h  i2s_hal.c  i2s_hal.h
src/i3c/: CMakeLists.txt  i3c.c  i3c.h  i3c_hal.c  i3c_hal.h
src/jtag/: CMakeLists.txt  jtag.c  jtag.h  jtag_hal.c  jtag_hal.h
src/lin/: CMakeLists.txt  lin.c  lin.h  lin_hal.c  lin_hal.h
src/modbus/: CMakeLists.txt  modbus.c  modbus.h  modbus_hal.c  modbus_hal.h
src/onewire/: CMakeLists.txt  onewire.c  onewire.h  onewire_hal.c  onewire_hal.h
src/pcie/: CMakeLists.txt  pcie.c  pcie.h  pcie_hal.c  pcie_hal.h
src/pmbus/: CMakeLists.txt  pmbus.c  pmbus.h  pmbus_hal.c  pmbus_hal.h
src/rs232/: CMakeLists.txt  rs232.c  rs232.h  rs232_hal.c  rs232_hal.h
src/rs422/: CMakeLists.txt  rs422.c  rs422.h  rs422_hal.c  rs422_hal.h
src/rs485/: CMakeLists.txt  rs485.c  rs485.h  rs485_hal.c  rs485_hal.h
src/sdio/: CMakeLists.txt  sdio.c  sdio.h  sdio_hal.c  sdio_hal.h
src/smbus/: CMakeLists.txt  smbus.c  smbus.h  smbus_hal.c  smbus_hal.h
src/spi/: CMakeLists.txt  spi.c  spi.h  spi_hal.c  spi_hal.h
src/swd/: CMakeLists.txt  swd.c  swd.h  swd_hal.c  swd_hal.h
src/uart/: CMakeLists.txt  uart.c  uart.h  uart_hal.c  uart_hal.h
src/usb/: CMakeLists.txt  usb.c  usb.h  usb_hal.c  usb_hal.h
test/: CMakeLists.txt  README.md  main.c
